work_good.output
Terminals unused in grammar

   DO


Grammar

    0 $accept: RunProgram $end

    1 RunProgram: CodeProgram TEOF

    2 CodeProgram: %empty
    3            | ProgramMainBody

    4 ProgramMainBody: Declarations
    5                | ProgramMainBody Declarations

    6 Declarations: VariableDeclaration ';'
    7             | FunctionDecl
    8             | DataTypeDecl ';'
    9             | ';'

   10 VariableDeclaration: VAR_TYPE VarDeclList
   11                    | CONST VAR_TYPE VarDeclList

   12 IdentTypes: ID
   13           | ID '[' AExp ']'
   14           | ID '[' AExp ']' '[' AExp ']'

   15 VarDeclList: IdentTypes
   16            | VarDeclList ',' IdentTypes
   17            | AssignementDeclID
   18            | VarDeclList ',' AssignementDeclID

   19 DataTypeDecl: STRUCT ID DataTypeBlock
   20             | STRUCT ID DataTypeBlock VarDeclList
   21             | ID VarDeclList
   22             | CONST ID VarDeclList

   23 DataTypeBlock: '{' '}'
   24              | '{' StructStmt '}'

   25 StructStmt: StructVariableDeclaration ';'
   26           | StructStmt StructVariableDeclaration ';'

   27 StructVariableDeclaration: VAR_TYPE VarDeclList
   28                          | CONST VAR_TYPE VarDeclList

   29 FunctionPrototype: VAR_TYPE ID '(' DeclParameters ')'
   30                  | VAR_TYPE ID '(' ')'
   31                  | VOID_TYPE ID '(' DeclParameters ')'
   32                  | VOID_TYPE ID '(' ')'

   33 DeclParameters: VAR_TYPE IdentTypes
   34               | DeclParameters ',' VAR_TYPE IdentTypes
   35               | CONST VAR_TYPE IdentTypes
   36               | DeclParameters ',' CONST VAR_TYPE IdentTypes
   37               | ID IdentTypes
   38               | DeclParameters ',' ID IdentTypes
   39               | CONST ID IdentTypes
   40               | DeclParameters ',' CONST ID IdentTypes

   41 FunctionDecl: FunctionPrototype ';'
   42             | FunctionPrototype BlockStatement

   43 printFunction: PRINT '(' AExp ')' ';'

   44 BlockStatement: '{' '}'
   45               | '{' Statements '}'

   46 Statements: SimpleStmt
   47           | Statements SimpleStmt

   48 SimpleStmt: SingleStatement ';'
   49           | BlockStatement
   50           | ControlStmt
   51           | printFunction
   52           | RETURN ValueTypes ';'
   53           | RETURN ';'
   54           | ';'

   55 AtomicValues: INTEGER
   56             | FLOAT
   57             | CHAR
   58             | STRING

   59 AExp: IdentTypes
   60     | IdentTypes '.' IdentTypes
   61     | AtomicValues
   62     | FunctionCall
   63     | AExp PLUS AExp
   64     | AExp MINUS AExp
   65     | AExp MULTIPLY AExp
   66     | AExp DIVISION AExp
   67     | AExp MODULO AExp
   68     | '(' AExp ')'

   69 AssignementDeclID: IdentTypes ASSIGN ValueTypes
   70                  | IdentTypes '.' IdentTypes ASSIGN ValueTypes

   71 IdAssignement: ID ASSIGN_PLUS AExp
   72              | ID ASSIGN_MINUS AExp
   73              | ID ASSIGN_PROD AExp
   74              | ID ASSIGN_DIV AExp
   75              | ID ASSIGN_MOD AExp

   76 Assignement: AssignementDeclID
   77            | IdAssignement

   78 CallParameters: ValueTypes
   79               | CallParameters ',' ValueTypes

   80 FunctionCall: ID '(' ')'
   81             | ID '(' CallParameters ')'

   82 SingleStatement: VariableDeclaration
   83                | DataTypeDecl
   84                | CondExp

   85 BExp: TRUE
   86     | FALSE
   87     | '(' BExp ')'
   88     | ValueTypes BOOL_OP ValueTypes

   89 ValueTypes: BExp
   90           | AExp

   91 CondExp: ValueTypes
   92        | Assignement
   93        | '(' Assignement ')'

   94 IfStatement: IF '(' CondExp ')' SimpleStmt
   95            | IF '(' CondExp ')' SimpleStmt ELSE SimpleStmt

   96 IfCond: CondExp '?' CondExp ':' CondExp

   97 StepFor1: %empty
   98         | VariableDeclaration
   99         | CondExp

  100 StepFor2_3: %empty
  101           | CondExp

  102 ForStatement: FOR '(' StepFor1 ';' StepFor2_3 ';' StepFor2_3 ')' SimpleStmt

  103 WhileStatement: WHILE '(' CondExp ')' SimpleStmt

  104 ControlStmt: IfStatement
  105            | IfCond ';'
  106            | ForStatement
  107            | WhileStatement


Terminals, with rules where they appear

$end (0) 0
'(' (40) 29 30 31 32 43 68 80 81 87 93 94 95 102 103
')' (41) 29 30 31 32 43 68 80 81 87 93 94 95 102 103
',' (44) 16 18 34 36 38 40 79
'.' (46) 60 70
':' (58) 96
';' (59) 6 8 9 25 26 41 43 48 52 53 54 102 105
'?' (63) 96
'[' (91) 13 14
']' (93) 13 14
'{' (123) 23 24 44 45
'}' (125) 23 24 44 45
error (256)
ID (258) 12 13 14 19 20 21 22 29 30 31 32 37 38 39 40 71 72 73 74 75
    80 81
VAR_TYPE (259) 10 11 27 28 29 30 33 34 35 36
INTEGER (260) 55
FLOAT (261) 56
CONST (262) 11 22 28 35 36 39 40
VOID_TYPE (263) 31 32
PRINT (264) 43
STRUCT (265) 19 20
RETURN (266) 52 53
TEOF (267) 1
ASSIGN_PLUS (268) 71
ASSIGN_MINUS (269) 72
ASSIGN_PROD (270) 73
ASSIGN_DIV (271) 74
ASSIGN_MOD (272) 75
ASSIGN (273) 69 70
MINUS (274) 64
PLUS (275) 63
DIVISION (276) 66
MULTIPLY (277) 65
MODULO (278) 67
CHAR (279) 57
STRING (280) 58
TRUE (281) 85
FALSE (282) 86
BOOL_OP (283) 88
FOR (284) 102
WHILE (285) 103
DO (286)
IF (287) 94 95
ELSE (288) 95
"simple_if" (289)


Nonterminals, with rules where they appear

$accept (46)
    on left: 0
RunProgram (47)
    on left: 1, on right: 0
CodeProgram (48)
    on left: 2 3, on right: 1
ProgramMainBody (49)
    on left: 4 5, on right: 3 5
Declarations (50)
    on left: 6 7 8 9, on right: 4 5
VariableDeclaration (51)
    on left: 10 11, on right: 6 82 98
IdentTypes (52)
    on left: 12 13 14, on right: 15 16 33 34 35 36 37 38 39 40 59 60
    69 70
VarDeclList (53)
    on left: 15 16 17 18, on right: 10 11 16 18 20 21 22 27 28
DataTypeDecl (54)
    on left: 19 20 21 22, on right: 8 83
DataTypeBlock (55)
    on left: 23 24, on right: 19 20
StructStmt (56)
    on left: 25 26, on right: 24 26
StructVariableDeclaration (57)
    on left: 27 28, on right: 25 26
FunctionPrototype (58)
    on left: 29 30 31 32, on right: 41 42
DeclParameters (59)
    on left: 33 34 35 36 37 38 39 40, on right: 29 31 34 36 38 40
FunctionDecl (60)
    on left: 41 42, on right: 7
printFunction (61)
    on left: 43, on right: 51
BlockStatement (62)
    on left: 44 45, on right: 42 49
Statements (63)
    on left: 46 47, on right: 45 47
SimpleStmt (64)
    on left: 48 49 50 51 52 53 54, on right: 46 47 94 95 102 103
AtomicValues (65)
    on left: 55 56 57 58, on right: 61
AExp (66)
    on left: 59 60 61 62 63 64 65 66 67 68, on right: 13 14 43 63 64
    65 66 67 68 71 72 73 74 75 90
AssignementDeclID (67)
    on left: 69 70, on right: 17 18 76
IdAssignement (68)
    on left: 71 72 73 74 75, on right: 77
Assignement (69)
    on left: 76 77, on right: 92 93
CallParameters (70)
    on left: 78 79, on right: 79 81
FunctionCall (71)
    on left: 80 81, on right: 62
SingleStatement (72)
    on left: 82 83 84, on right: 48
BExp (73)
    on left: 85 86 87 88, on right: 87 89
ValueTypes (74)
    on left: 89 90, on right: 52 69 70 78 79 88 91
CondExp (75)
    on left: 91 92 93, on right: 84 94 95 96 99 101 103
IfStatement (76)
    on left: 94 95, on right: 104
IfCond (77)
    on left: 96, on right: 105
StepFor1 (78)
    on left: 97 98 99, on right: 102
StepFor2_3 (79)
    on left: 100 101, on right: 102
ForStatement (80)
    on left: 102, on right: 106
WhileStatement (81)
    on left: 103, on right: 107
ControlStmt (82)
    on left: 104 105 106 107, on right: 50


State 0

    0 $accept: . RunProgram $end

    ID         shift, and go to state 1
    VAR_TYPE   shift, and go to state 2
    CONST      shift, and go to state 3
    VOID_TYPE  shift, and go to state 4
    STRUCT     shift, and go to state 5
    ';'        shift, and go to state 6

    $default  reduce using rule 2 (CodeProgram)

    RunProgram           go to state 7
    CodeProgram          go to state 8
    ProgramMainBody      go to state 9
    Declarations         go to state 10
    VariableDeclaration  go to state 11
    DataTypeDecl         go to state 12
    FunctionPrototype    go to state 13
    FunctionDecl         go to state 14


State 1

   21 DataTypeDecl: ID . VarDeclList

    ID  shift, and go to state 15

    IdentTypes         go to state 16
    VarDeclList        go to state 17
    AssignementDeclID  go to state 18


State 2

   10 VariableDeclaration: VAR_TYPE . VarDeclList
   29 FunctionPrototype: VAR_TYPE . ID '(' DeclParameters ')'
   30                  | VAR_TYPE . ID '(' ')'

    ID  shift, and go to state 19

    IdentTypes         go to state 16
    VarDeclList        go to state 20
    AssignementDeclID  go to state 18


State 3

   11 VariableDeclaration: CONST . VAR_TYPE VarDeclList
   22 DataTypeDecl: CONST . ID VarDeclList

    ID        shift, and go to state 21
    VAR_TYPE  shift, and go to state 22


State 4

   31 FunctionPrototype: VOID_TYPE . ID '(' DeclParameters ')'
   32                  | VOID_TYPE . ID '(' ')'

    ID  shift, and go to state 23


State 5

   19 DataTypeDecl: STRUCT . ID DataTypeBlock
   20             | STRUCT . ID DataTypeBlock VarDeclList

    ID  shift, and go to state 24


State 6

    9 Declarations: ';' .

    $default  reduce using rule 9 (Declarations)


State 7

    0 $accept: RunProgram . $end

    $end  shift, and go to state 25


State 8

    1 RunProgram: CodeProgram . TEOF

    TEOF  shift, and go to state 26


State 9

    3 CodeProgram: ProgramMainBody .
    5 ProgramMainBody: ProgramMainBody . Declarations

    ID         shift, and go to state 1
    VAR_TYPE   shift, and go to state 2
    CONST      shift, and go to state 3
    VOID_TYPE  shift, and go to state 4
    STRUCT     shift, and go to state 5
    ';'        shift, and go to state 6

    $default  reduce using rule 3 (CodeProgram)

    Declarations         go to state 27
    VariableDeclaration  go to state 11
    DataTypeDecl         go to state 12
    FunctionPrototype    go to state 13
    FunctionDecl         go to state 14


State 10

    4 ProgramMainBody: Declarations .

    $default  reduce using rule 4 (ProgramMainBody)


State 11

    6 Declarations: VariableDeclaration . ';'

    ';'  shift, and go to state 28


State 12

    8 Declarations: DataTypeDecl . ';'

    ';'  shift, and go to state 29


State 13

   41 FunctionDecl: FunctionPrototype . ';'
   42             | FunctionPrototype . BlockStatement

    ';'  shift, and go to state 30
    '{'  shift, and go to state 31

    BlockStatement  go to state 32


State 14

    7 Declarations: FunctionDecl .

    $default  reduce using rule 7 (Declarations)


State 15

   12 IdentTypes: ID .
   13           | ID . '[' AExp ']'
   14           | ID . '[' AExp ']' '[' AExp ']'

    '['  shift, and go to state 33

    $default  reduce using rule 12 (IdentTypes)


State 16

   15 VarDeclList: IdentTypes .
   69 AssignementDeclID: IdentTypes . ASSIGN ValueTypes
   70                  | IdentTypes . '.' IdentTypes ASSIGN ValueTypes

    ASSIGN  shift, and go to state 34
    '.'     shift, and go to state 35

    $default  reduce using rule 15 (VarDeclList)


State 17

   16 VarDeclList: VarDeclList . ',' IdentTypes
   18            | VarDeclList . ',' AssignementDeclID
   21 DataTypeDecl: ID VarDeclList .

    ','  shift, and go to state 36

    $default  reduce using rule 21 (DataTypeDecl)


State 18

   17 VarDeclList: AssignementDeclID .

    $default  reduce using rule 17 (VarDeclList)


State 19

   12 IdentTypes: ID .
   13           | ID . '[' AExp ']'
   14           | ID . '[' AExp ']' '[' AExp ']'
   29 FunctionPrototype: VAR_TYPE ID . '(' DeclParameters ')'
   30                  | VAR_TYPE ID . '(' ')'

    '['  shift, and go to state 33
    '('  shift, and go to state 37

    $default  reduce using rule 12 (IdentTypes)


State 20

   10 VariableDeclaration: VAR_TYPE VarDeclList .
   16 VarDeclList: VarDeclList . ',' IdentTypes
   18            | VarDeclList . ',' AssignementDeclID

    ','  shift, and go to state 36

    $default  reduce using rule 10 (VariableDeclaration)


State 21

   22 DataTypeDecl: CONST ID . VarDeclList

    ID  shift, and go to state 15

    IdentTypes         go to state 16
    VarDeclList        go to state 38
    AssignementDeclID  go to state 18


State 22

   11 VariableDeclaration: CONST VAR_TYPE . VarDeclList

    ID  shift, and go to state 15

    IdentTypes         go to state 16
    VarDeclList        go to state 39
    AssignementDeclID  go to state 18


State 23

   31 FunctionPrototype: VOID_TYPE ID . '(' DeclParameters ')'
   32                  | VOID_TYPE ID . '(' ')'

    '('  shift, and go to state 40


State 24

   19 DataTypeDecl: STRUCT ID . DataTypeBlock
   20             | STRUCT ID . DataTypeBlock VarDeclList

    '{'  shift, and go to state 41

    DataTypeBlock  go to state 42


State 25

    0 $accept: RunProgram $end .

    $default  accept


State 26

    1 RunProgram: CodeProgram TEOF .

    $default  reduce using rule 1 (RunProgram)


State 27

    5 ProgramMainBody: ProgramMainBody Declarations .

    $default  reduce using rule 5 (ProgramMainBody)


State 28

    6 Declarations: VariableDeclaration ';' .

    $default  reduce using rule 6 (Declarations)


State 29

    8 Declarations: DataTypeDecl ';' .

    $default  reduce using rule 8 (Declarations)


State 30

   41 FunctionDecl: FunctionPrototype ';' .

    $default  reduce using rule 41 (FunctionDecl)


State 31

   44 BlockStatement: '{' . '}'
   45               | '{' . Statements '}'

    ID        shift, and go to state 43
    VAR_TYPE  shift, and go to state 44
    INTEGER   shift, and go to state 45
    FLOAT     shift, and go to state 46
    CONST     shift, and go to state 3
    PRINT     shift, and go to state 47
    STRUCT    shift, and go to state 5
    RETURN    shift, and go to state 48
    CHAR      shift, and go to state 49
    STRING    shift, and go to state 50
    TRUE      shift, and go to state 51
    FALSE     shift, and go to state 52
    FOR       shift, and go to state 53
    WHILE     shift, and go to state 54
    IF        shift, and go to state 55
    ';'       shift, and go to state 56
    '{'       shift, and go to state 31
    '}'       shift, and go to state 57
    '('       shift, and go to state 58

    VariableDeclaration  go to state 59
    IdentTypes           go to state 60
    DataTypeDecl         go to state 61
    printFunction        go to state 62
    BlockStatement       go to state 63
    Statements           go to state 64
    SimpleStmt           go to state 65
    AtomicValues         go to state 66
    AExp                 go to state 67
    AssignementDeclID    go to state 68
    IdAssignement        go to state 69
    Assignement          go to state 70
    FunctionCall         go to state 71
    SingleStatement      go to state 72
    BExp                 go to state 73
    ValueTypes           go to state 74
    CondExp              go to state 75
    IfStatement          go to state 76
    IfCond               go to state 77
    ForStatement         go to state 78
    WhileStatement       go to state 79
    ControlStmt          go to state 80


State 32

   42 FunctionDecl: FunctionPrototype BlockStatement .

    $default  reduce using rule 42 (FunctionDecl)


State 33

   13 IdentTypes: ID '[' . AExp ']'
   14           | ID '[' . AExp ']' '[' AExp ']'

    ID       shift, and go to state 81
    INTEGER  shift, and go to state 45
    FLOAT    shift, and go to state 46
    CHAR     shift, and go to state 49
    STRING   shift, and go to state 50
    '('      shift, and go to state 82

    IdentTypes    go to state 83
    AtomicValues  go to state 66
    AExp          go to state 84
    FunctionCall  go to state 71


State 34

   69 AssignementDeclID: IdentTypes ASSIGN . ValueTypes

    ID       shift, and go to state 81
    INTEGER  shift, and go to state 45
    FLOAT    shift, and go to state 46
    CHAR     shift, and go to state 49
    STRING   shift, and go to state 50
    TRUE     shift, and go to state 51
    FALSE    shift, and go to state 52
    '('      shift, and go to state 85

    IdentTypes    go to state 83
    AtomicValues  go to state 66
    AExp          go to state 67
    FunctionCall  go to state 71
    BExp          go to state 73
    ValueTypes    go to state 86


State 35

   70 AssignementDeclID: IdentTypes '.' . IdentTypes ASSIGN ValueTypes

    ID  shift, and go to state 15

    IdentTypes  go to state 87


State 36

   16 VarDeclList: VarDeclList ',' . IdentTypes
   18            | VarDeclList ',' . AssignementDeclID

    ID  shift, and go to state 15

    IdentTypes         go to state 88
    AssignementDeclID  go to state 89


State 37

   29 FunctionPrototype: VAR_TYPE ID '(' . DeclParameters ')'
   30                  | VAR_TYPE ID '(' . ')'

    ID        shift, and go to state 90
    VAR_TYPE  shift, and go to state 91
    CONST     shift, and go to state 92
    ')'       shift, and go to state 93

    DeclParameters  go to state 94


State 38

   16 VarDeclList: VarDeclList . ',' IdentTypes
   18            | VarDeclList . ',' AssignementDeclID
   22 DataTypeDecl: CONST ID VarDeclList .

    ','  shift, and go to state 36

    $default  reduce using rule 22 (DataTypeDecl)


State 39

   11 VariableDeclaration: CONST VAR_TYPE VarDeclList .
   16 VarDeclList: VarDeclList . ',' IdentTypes
   18            | VarDeclList . ',' AssignementDeclID

    ','  shift, and go to state 36

    $default  reduce using rule 11 (VariableDeclaration)


State 40

   31 FunctionPrototype: VOID_TYPE ID '(' . DeclParameters ')'
   32                  | VOID_TYPE ID '(' . ')'

    ID        shift, and go to state 90
    VAR_TYPE  shift, and go to state 91
    CONST     shift, and go to state 92
    ')'       shift, and go to state 95

    DeclParameters  go to state 96


State 41

   23 DataTypeBlock: '{' . '}'
   24              | '{' . StructStmt '}'

    VAR_TYPE  shift, and go to state 97
    CONST     shift, and go to state 98
    '}'       shift, and go to state 99

    StructStmt                 go to state 100
    StructVariableDeclaration  go to state 101


State 42

   19 DataTypeDecl: STRUCT ID DataTypeBlock .
   20             | STRUCT ID DataTypeBlock . VarDeclList

    ID  shift, and go to state 15

    $default  reduce using rule 19 (DataTypeDecl)

    IdentTypes         go to state 16
    VarDeclList        go to state 102
    AssignementDeclID  go to state 18


State 43

   12 IdentTypes: ID .
   13           | ID . '[' AExp ']'
   14           | ID . '[' AExp ']' '[' AExp ']'
   21 DataTypeDecl: ID . VarDeclList
   71 IdAssignement: ID . ASSIGN_PLUS AExp
   72              | ID . ASSIGN_MINUS AExp
   73              | ID . ASSIGN_PROD AExp
   74              | ID . ASSIGN_DIV AExp
   75              | ID . ASSIGN_MOD AExp
   80 FunctionCall: ID . '(' ')'
   81             | ID . '(' CallParameters ')'

    ID            shift, and go to state 15
    ASSIGN_PLUS   shift, and go to state 103
    ASSIGN_MINUS  shift, and go to state 104
    ASSIGN_PROD   shift, and go to state 105
    ASSIGN_DIV    shift, and go to state 106
    ASSIGN_MOD    shift, and go to state 107
    '['           shift, and go to state 33
    '('           shift, and go to state 108

    $default  reduce using rule 12 (IdentTypes)

    IdentTypes         go to state 16
    VarDeclList        go to state 17
    AssignementDeclID  go to state 18


State 44

   10 VariableDeclaration: VAR_TYPE . VarDeclList

    ID  shift, and go to state 15

    IdentTypes         go to state 16
    VarDeclList        go to state 20
    AssignementDeclID  go to state 18


State 45

   55 AtomicValues: INTEGER .

    $default  reduce using rule 55 (AtomicValues)


State 46

   56 AtomicValues: FLOAT .

    $default  reduce using rule 56 (AtomicValues)


State 47

   43 printFunction: PRINT . '(' AExp ')' ';'

    '('  shift, and go to state 109


State 48

   52 SimpleStmt: RETURN . ValueTypes ';'
   53           | RETURN . ';'

    ID       shift, and go to state 81
    INTEGER  shift, and go to state 45
    FLOAT    shift, and go to state 46
    CHAR     shift, and go to state 49
    STRING   shift, and go to state 50
    TRUE     shift, and go to state 51
    FALSE    shift, and go to state 52
    ';'      shift, and go to state 110
    '('      shift, and go to state 85

    IdentTypes    go to state 83
    AtomicValues  go to state 66
    AExp          go to state 67
    FunctionCall  go to state 71
    BExp          go to state 73
    ValueTypes    go to state 111


State 49

   57 AtomicValues: CHAR .

    $default  reduce using rule 57 (AtomicValues)


State 50

   58 AtomicValues: STRING .

    $default  reduce using rule 58 (AtomicValues)


State 51

   85 BExp: TRUE .

    $default  reduce using rule 85 (BExp)


State 52

   86 BExp: FALSE .

    $default  reduce using rule 86 (BExp)


State 53

  102 ForStatement: FOR . '(' StepFor1 ';' StepFor2_3 ';' StepFor2_3 ')' SimpleStmt

    '('  shift, and go to state 112


State 54

  103 WhileStatement: WHILE . '(' CondExp ')' SimpleStmt

    '('  shift, and go to state 113


State 55

   94 IfStatement: IF . '(' CondExp ')' SimpleStmt
   95            | IF . '(' CondExp ')' SimpleStmt ELSE SimpleStmt

    '('  shift, and go to state 114


State 56

   54 SimpleStmt: ';' .

    $default  reduce using rule 54 (SimpleStmt)


State 57

   44 BlockStatement: '{' '}' .

    $default  reduce using rule 44 (BlockStatement)


State 58

   68 AExp: '(' . AExp ')'
   87 BExp: '(' . BExp ')'
   93 CondExp: '(' . Assignement ')'

    ID       shift, and go to state 115
    INTEGER  shift, and go to state 45
    FLOAT    shift, and go to state 46
    CHAR     shift, and go to state 49
    STRING   shift, and go to state 50
    TRUE     shift, and go to state 51
    FALSE    shift, and go to state 52
    '('      shift, and go to state 85

    IdentTypes         go to state 60
    AtomicValues       go to state 66
    AExp               go to state 116
    AssignementDeclID  go to state 68
    IdAssignement      go to state 69
    Assignement        go to state 117
    FunctionCall       go to state 71
    BExp               go to state 118
    ValueTypes         go to state 119


State 59

   82 SingleStatement: VariableDeclaration .

    $default  reduce using rule 82 (SingleStatement)


State 60

   59 AExp: IdentTypes .
   60     | IdentTypes . '.' IdentTypes
   69 AssignementDeclID: IdentTypes . ASSIGN ValueTypes
   70                  | IdentTypes . '.' IdentTypes ASSIGN ValueTypes

    ASSIGN  shift, and go to state 34
    '.'     shift, and go to state 120

    $default  reduce using rule 59 (AExp)


State 61

   83 SingleStatement: DataTypeDecl .

    $default  reduce using rule 83 (SingleStatement)


State 62

   51 SimpleStmt: printFunction .

    $default  reduce using rule 51 (SimpleStmt)


State 63

   49 SimpleStmt: BlockStatement .

    $default  reduce using rule 49 (SimpleStmt)


State 64

   45 BlockStatement: '{' Statements . '}'
   47 Statements: Statements . SimpleStmt

    ID        shift, and go to state 43
    VAR_TYPE  shift, and go to state 44
    INTEGER   shift, and go to state 45
    FLOAT     shift, and go to state 46
    CONST     shift, and go to state 3
    PRINT     shift, and go to state 47
    STRUCT    shift, and go to state 5
    RETURN    shift, and go to state 48
    CHAR      shift, and go to state 49
    STRING    shift, and go to state 50
    TRUE      shift, and go to state 51
    FALSE     shift, and go to state 52
    FOR       shift, and go to state 53
    WHILE     shift, and go to state 54
    IF        shift, and go to state 55
    ';'       shift, and go to state 56
    '{'       shift, and go to state 31
    '}'       shift, and go to state 121
    '('       shift, and go to state 58

    VariableDeclaration  go to state 59
    IdentTypes           go to state 60
    DataTypeDecl         go to state 61
    printFunction        go to state 62
    BlockStatement       go to state 63
    SimpleStmt           go to state 122
    AtomicValues         go to state 66
    AExp                 go to state 67
    AssignementDeclID    go to state 68
    IdAssignement        go to state 69
    Assignement          go to state 70
    FunctionCall         go to state 71
    SingleStatement      go to state 72
    BExp                 go to state 73
    ValueTypes           go to state 74
    CondExp              go to state 75
    IfStatement          go to state 76
    IfCond               go to state 77
    ForStatement         go to state 78
    WhileStatement       go to state 79
    ControlStmt          go to state 80


State 65

   46 Statements: SimpleStmt .

    $default  reduce using rule 46 (Statements)


State 66

   61 AExp: AtomicValues .

    $default  reduce using rule 61 (AExp)


State 67

   63 AExp: AExp . PLUS AExp
   64     | AExp . MINUS AExp
   65     | AExp . MULTIPLY AExp
   66     | AExp . DIVISION AExp
   67     | AExp . MODULO AExp
   90 ValueTypes: AExp .

    MINUS     shift, and go to state 123
    PLUS      shift, and go to state 124
    DIVISION  shift, and go to state 125
    MULTIPLY  shift, and go to state 126
    MODULO    shift, and go to state 127

    $default  reduce using rule 90 (ValueTypes)


State 68

   76 Assignement: AssignementDeclID .

    $default  reduce using rule 76 (Assignement)


State 69

   77 Assignement: IdAssignement .

    $default  reduce using rule 77 (Assignement)


State 70

   92 CondExp: Assignement .

    $default  reduce using rule 92 (CondExp)


State 71

   62 AExp: FunctionCall .

    $default  reduce using rule 62 (AExp)


State 72

   48 SimpleStmt: SingleStatement . ';'

    ';'  shift, and go to state 128


State 73

   89 ValueTypes: BExp .

    $default  reduce using rule 89 (ValueTypes)


State 74

   88 BExp: ValueTypes . BOOL_OP ValueTypes
   91 CondExp: ValueTypes .

    BOOL_OP  shift, and go to state 129

    $default  reduce using rule 91 (CondExp)


State 75

   84 SingleStatement: CondExp .
   96 IfCond: CondExp . '?' CondExp ':' CondExp

    '?'  shift, and go to state 130

    $default  reduce using rule 84 (SingleStatement)


State 76

  104 ControlStmt: IfStatement .

    $default  reduce using rule 104 (ControlStmt)


State 77

  105 ControlStmt: IfCond . ';'

    ';'  shift, and go to state 131


State 78

  106 ControlStmt: ForStatement .

    $default  reduce using rule 106 (ControlStmt)


State 79

  107 ControlStmt: WhileStatement .

    $default  reduce using rule 107 (ControlStmt)


State 80

   50 SimpleStmt: ControlStmt .

    $default  reduce using rule 50 (SimpleStmt)


State 81

   12 IdentTypes: ID .
   13           | ID . '[' AExp ']'
   14           | ID . '[' AExp ']' '[' AExp ']'
   80 FunctionCall: ID . '(' ')'
   81             | ID . '(' CallParameters ')'

    '['  shift, and go to state 33
    '('  shift, and go to state 108

    $default  reduce using rule 12 (IdentTypes)


State 82

   68 AExp: '(' . AExp ')'

    ID       shift, and go to state 81
    INTEGER  shift, and go to state 45
    FLOAT    shift, and go to state 46
    CHAR     shift, and go to state 49
    STRING   shift, and go to state 50
    '('      shift, and go to state 82

    IdentTypes    go to state 83
    AtomicValues  go to state 66
    AExp          go to state 132
    FunctionCall  go to state 71


State 83

   59 AExp: IdentTypes .
   60     | IdentTypes . '.' IdentTypes

    '.'  shift, and go to state 133

    $default  reduce using rule 59 (AExp)


State 84

   13 IdentTypes: ID '[' AExp . ']'
   14           | ID '[' AExp . ']' '[' AExp ']'
   63 AExp: AExp . PLUS AExp
   64     | AExp . MINUS AExp
   65     | AExp . MULTIPLY AExp
   66     | AExp . DIVISION AExp
   67     | AExp . MODULO AExp

    MINUS     shift, and go to state 123
    PLUS      shift, and go to state 124
    DIVISION  shift, and go to state 125
    MULTIPLY  shift, and go to state 126
    MODULO    shift, and go to state 127
    ']'       shift, and go to state 134


State 85

   68 AExp: '(' . AExp ')'
   87 BExp: '(' . BExp ')'

    ID       shift, and go to state 81
    INTEGER  shift, and go to state 45
    FLOAT    shift, and go to state 46
    CHAR     shift, and go to state 49
    STRING   shift, and go to state 50
    TRUE     shift, and go to state 51
    FALSE    shift, and go to state 52
    '('      shift, and go to state 85

    IdentTypes    go to state 83
    AtomicValues  go to state 66
    AExp          go to state 116
    FunctionCall  go to state 71
    BExp          go to state 118
    ValueTypes    go to state 119


State 86

   69 AssignementDeclID: IdentTypes ASSIGN ValueTypes .
   88 BExp: ValueTypes . BOOL_OP ValueTypes

    BOOL_OP  shift, and go to state 129

    $default  reduce using rule 69 (AssignementDeclID)


State 87

   70 AssignementDeclID: IdentTypes '.' IdentTypes . ASSIGN ValueTypes

    ASSIGN  shift, and go to state 135


State 88

   16 VarDeclList: VarDeclList ',' IdentTypes .
   69 AssignementDeclID: IdentTypes . ASSIGN ValueTypes
   70                  | IdentTypes . '.' IdentTypes ASSIGN ValueTypes

    ASSIGN  shift, and go to state 34
    '.'     shift, and go to state 35

    $default  reduce using rule 16 (VarDeclList)


State 89

   18 VarDeclList: VarDeclList ',' AssignementDeclID .

    $default  reduce using rule 18 (VarDeclList)


State 90

   37 DeclParameters: ID . IdentTypes

    ID  shift, and go to state 15

    IdentTypes  go to state 136


State 91

   33 DeclParameters: VAR_TYPE . IdentTypes

    ID  shift, and go to state 15

    IdentTypes  go to state 137


State 92

   35 DeclParameters: CONST . VAR_TYPE IdentTypes
   39               | CONST . ID IdentTypes

    ID        shift, and go to state 138
    VAR_TYPE  shift, and go to state 139


State 93

   30 FunctionPrototype: VAR_TYPE ID '(' ')' .

    $default  reduce using rule 30 (FunctionPrototype)


State 94

   29 FunctionPrototype: VAR_TYPE ID '(' DeclParameters . ')'
   34 DeclParameters: DeclParameters . ',' VAR_TYPE IdentTypes
   36               | DeclParameters . ',' CONST VAR_TYPE IdentTypes
   38               | DeclParameters . ',' ID IdentTypes
   40               | DeclParameters . ',' CONST ID IdentTypes

    ','  shift, and go to state 140
    ')'  shift, and go to state 141


State 95

   32 FunctionPrototype: VOID_TYPE ID '(' ')' .

    $default  reduce using rule 32 (FunctionPrototype)


State 96

   31 FunctionPrototype: VOID_TYPE ID '(' DeclParameters . ')'
   34 DeclParameters: DeclParameters . ',' VAR_TYPE IdentTypes
   36               | DeclParameters . ',' CONST VAR_TYPE IdentTypes
   38               | DeclParameters . ',' ID IdentTypes
   40               | DeclParameters . ',' CONST ID IdentTypes

    ','  shift, and go to state 140
    ')'  shift, and go to state 142


State 97

   27 StructVariableDeclaration: VAR_TYPE . VarDeclList

    ID  shift, and go to state 15

    IdentTypes         go to state 16
    VarDeclList        go to state 143
    AssignementDeclID  go to state 18


State 98

   28 StructVariableDeclaration: CONST . VAR_TYPE VarDeclList

    VAR_TYPE  shift, and go to state 144


State 99

   23 DataTypeBlock: '{' '}' .

    $default  reduce using rule 23 (DataTypeBlock)


State 100

   24 DataTypeBlock: '{' StructStmt . '}'
   26 StructStmt: StructStmt . StructVariableDeclaration ';'

    VAR_TYPE  shift, and go to state 97
    CONST     shift, and go to state 98
    '}'       shift, and go to state 145

    StructVariableDeclaration  go to state 146


State 101

   25 StructStmt: StructVariableDeclaration . ';'

    ';'  shift, and go to state 147


State 102

   16 VarDeclList: VarDeclList . ',' IdentTypes
   18            | VarDeclList . ',' AssignementDeclID
   20 DataTypeDecl: STRUCT ID DataTypeBlock VarDeclList .

    ','  shift, and go to state 36

    $default  reduce using rule 20 (DataTypeDecl)


State 103

   71 IdAssignement: ID ASSIGN_PLUS . AExp

    ID       shift, and go to state 81
    INTEGER  shift, and go to state 45
    FLOAT    shift, and go to state 46
    CHAR     shift, and go to state 49
    STRING   shift, and go to state 50
    '('      shift, and go to state 82

    IdentTypes    go to state 83
    AtomicValues  go to state 66
    AExp          go to state 148
    FunctionCall  go to state 71


State 104

   72 IdAssignement: ID ASSIGN_MINUS . AExp

    ID       shift, and go to state 81
    INTEGER  shift, and go to state 45
    FLOAT    shift, and go to state 46
    CHAR     shift, and go to state 49
    STRING   shift, and go to state 50
    '('      shift, and go to state 82

    IdentTypes    go to state 83
    AtomicValues  go to state 66
    AExp          go to state 149
    FunctionCall  go to state 71


State 105

   73 IdAssignement: ID ASSIGN_PROD . AExp
